--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,19 @@
 <html>
     <head>
-        <title>Bagja's blog</title>
+        <title>Django Blog</title>
     </head>
     <body>
-        <p>Hi there!</p>
-        <p>It works!</p>
+        <div>
+            <h1><a href="/">Django Blog</a></h1>
+        </div>
+
+        {% for post in posts %}
+           <div>
+              <h2><a href="">{{ post.title }}</a></h2>
+              <p>{{ post.text|linebreaksbr }}</p>
+			  <p>published: {{ post.published_date }}</p>
+          </div>
+        {% endfor %}
+		
     </body>
 </html>
